fix card alignment

--- a/src/views/Credentials/styles.css
+++ b/src/views/Credentials/styles.css
@@ -6,6 +6,6 @@
 }
 
 .card-website-logo {
-  height: 15px;
+  height: 20px;
   margin-right: 10px;
 }
